--- a/Translate/Servicios/enServicio2.html
+++ b/Translate/Servicios/enServicio2.html
@@ -96,11 +96,11 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../Static/Images/Canasta/render1.jpg" alt="Producto" class="imagen-principal">
+                <img id="imagen-principal" src="../../../../Static/Images/Canasta/render1.jpg" alt="Producto" class="imagen-principal">
                 <div class="miniaturas">
-                    <img src="../../../Static/Images/Canasta/render1.jpg" class="mini activa" alt="Canasta para Tubería Vista 1"> 
-                    <img src="../../../Static/Images/Canasta/render2.jpg" class="mini" alt="Canasta para Tubería Vista 2">
-                    <img src="../../../Static/Images/Canasta/render3.jpg" class="mini" alt="Canasta para Tubería Vista 3">
+                    <img src="../../../../Static/Images/Canasta/render1.jpg" class="mini activa" alt="Canasta para Tubería Vista 1"> 
+                    <img src="../../../../Static/Images/Canasta/render2.jpg" class="mini" alt="Canasta para Tubería Vista 2">
+                    <img src="../../../../Static/Images/Canasta/render3.jpg" class="mini" alt="Canasta para Tubería Vista 3">
                 </div>
             </div>
         </div>
