--- a/Translate/Servicios/enServicio1.html
+++ b/Translate/Servicios/enServicio1.html
@@ -132,14 +132,14 @@
             </div>
             
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../Static/Images/Volco Lineal/render 1.jpg" alt="Cama baja de tiro" class="imagen-principal">
+                <img id="imagen-principal" src="../../../../Static/Images/Volco Lineal/render 1.jpg" alt="Cama baja de tiro" class="imagen-principal">
                 <div class="miniaturas">
-                    <img id="imagen-principal" src="../../../Static/Images/Volco Lineal/render 1.jpg" alt="Vista 1" class="mini activa">
-                    <img id="imagen-principal" src="../../../Static/Images/Volco Lineal/render2.jpg" alt="Vista 2" class="mini">
-                    <img id="imagen-principal" src="../../../Static/Images/Volco Lineal/render3.jpg" alt="Vista 3" class="mini">
-                    <img id="imagen-principal" src="../../../Static/Images/Volco Lineal/render4.jpg" alt="Vista 4" class="mini">
-                    <img id="imagen-principal" src="../../../Static/Images/Volco Lineal/render5.jpg" alt="Vista 5" class="mini">
-                    <img id="imagen-principal" src="../../../Static/Images/Volco Lineal/render6.jpg" alt="Vista 6" class="mini">
+                    <img id="imagen-principal" src="../../../../Static/Images/Volco Lineal/render 1.jpg" alt="Vista 1" class="mini activa">
+                    <img id="imagen-principal" src="../../../../Static/Images/Volco Lineal/render2.jpg" alt="Vista 2" class="mini">
+                    <img id="imagen-principal" src="../../../../Static/Images/Volco Lineal/render3.jpg" alt="Vista 3" class="mini">
+                    <img id="imagen-principal" src="../../../../Static/Images/Volco Lineal/render4.jpg" alt="Vista 4" class="mini">
+                    <img id="imagen-principal" src="../../../../Static/Images/Volco Lineal/render5.jpg" alt="Vista 5" class="mini">
+                    <img id="imagen-principal" src="../../../../Static/Images/Volco Lineal/render6.jpg" alt="Vista 6" class="mini">
                 </div>
             </div>
         </div>
