--- a/Translate/Servicios/enServicio7.html
+++ b/Translate/Servicios/enServicio7.html
@@ -98,12 +98,11 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../Static/Images/Semiremolque Contenedor/Render1.jpg" alt="Semirremolque Cama Baja Full Services" class="imagen-principal">
-
+                <img id="imagen-principal" src="../../../../Static/Images/Semiremolque Contenedor/Render1.jpg" alt="Semirremolque Cama Baja Full Services" class="imagen-principal">
                 <div class="miniaturas">
-                    <img id="imagen-principal" src="../../../Static/Images/Semiremolque Contenedor/Render1.jpg" alt="Semirremolque Cama Baja Vista 2" class="mini activa">
-                    <img id="imagen-principal" src="../../../Static/Images/Semiremolque Contenedor/Render2.jpg" alt="Semirremolque Cama Baja Vista 3" class="mini">
-                    <img id="imagen-principal" src="../../../Static/Images/Semiremolque Contenedor/Render3.jpg" alt="Semirremolque Cama Baja Vista 4" class="mini">
+                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque Contenedor/Render1.jpg" alt="Semirremolque Cama Baja Vista 2" class="mini activa">
+                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque Contenedor/Render2.jpg" alt="Semirremolque Cama Baja Vista 3" class="mini">
+                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque Contenedor/Render3.jpg" alt="Semirremolque Cama Baja Vista 4" class="mini">
                 </div>
             </div>
         </div>
