--- a/enIndex.html
+++ b/enIndex.html
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <div class="about-image reveal">
-                            <img src="/Static/Images/FULL- ABOUT1.jpg" alt="Instalaciones Full Services">
+                            <img src="Static/Images/FULL- ABOUT1.jpg" alt="Instalaciones Full Services">
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="about-image reveal">
-                            <img src="/Static/Images/FULL- ABOUT2.jpg" alt="Instalaciones Full Services">
+                            <img src="Static/Images/FULL- ABOUT2.jpg" alt="Instalaciones Full Services">
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                         <div class="about-image reveal">
-                            <img src="/Static/Images/FULL- ABOUT3.jpg" alt="Instalaciones Full Services">
+                            <img src="Static/Images/FULL- ABOUT3.jpg" alt="Instalaciones Full Services">
                         </div>
                     </div>
                 </div>
@@ -532,7 +532,7 @@
                         <div class="logo">
                             <a href="#inicio">
                                 <img class="logo-img" src="Static/Images/FULL-LOGO-H.png" alt="Logo Full Services SAS">
-                                <img class="logo-img-dark" src="/Static/Images/logo prueba.png" alt="Logo Full Services SAS">
+                                <img class="logo-img-dark" src="Static/Images/logo prueba.png" alt="Logo Full Services SAS">
                             </a>
                         </div>
                     </h3>
