--- a/Translate/Servicios/enServicio5.html
+++ b/Translate/Servicios/enServicio5.html
@@ -95,14 +95,13 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../../Static/Images/Volco Chasis/Render1.jpg" alt="Volco sobre Chasis Full Services" class="imagen-principal">
-
+                <img id="imagen-principal" src="../../Static/Images/Volco Chasis/Render1.jpg" alt="Volco sobre Chasis Full Services" class="imagen-principal">
                 <div class="miniaturas">
-                    <img id="imagen-principal" src="../../../../Static/Images/Volco Chasis/Render1.jpg" alt="Volco Vista 2" class="mini activa">
-                    <img id="imagen-principal" src="../../../../Static/Images/Volco Chasis/Render2.jpg" alt="Volco Vista 3" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Volco Chasis/Render3.jpg" alt="Volco Vista 4" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Volco Chasis/Render4.jpg" alt="Volco Vista 5" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Volco Chasis/Render5.jpg" alt="Volco Vista 6" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Volco Chasis/Render1.jpg" alt="Volco Vista 2" class="mini activa">
+                    <img id="imagen-principal" src="../../Static/Images/Volco Chasis/Render2.jpg" alt="Volco Vista 3" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Volco Chasis/Render3.jpg" alt="Volco Vista 4" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Volco Chasis/Render4.jpg" alt="Volco Vista 5" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Volco Chasis/Render5.jpg" alt="Volco Vista 6" class="mini">
                 </div>
             </div>
         </div>
