--- a/Translate/Servicios/enServicio8.html
+++ b/Translate/Servicios/enServicio8.html
@@ -98,10 +98,10 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../../Static/Images/Tanque Lodos/Render 1.jpg" alt="Tanque de Lodos Full Services" class="imagen-principal">
+                <img id="imagen-principal" src="../../Static/Images/Tanque Lodos/Render 1.jpg" alt="Tanque de Lodos Full Services" class="imagen-principal">
                 <div class="miniaturas">
-                    <img id="imagen-principal" src="../../../../Static/Images/Tanque Lodos/Render 1.jpg" alt="Tanque de Lodos Vista 2" class="mini activa">
-                    <img id="imagen-principal" src="../../../../Static/Images/Tanque Lodos/Render 2.jpg" alt="Tanque de Lodos Vista 3" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Tanque Lodos/Render 1.jpg" alt="Tanque de Lodos Vista 2" class="mini activa">
+                    <img id="imagen-principal" src="../../Static/Images/Tanque Lodos/Render 2.jpg" alt="Tanque de Lodos Vista 3" class="mini">
                 </div>
             </div>
         </div>
