--- a/Translate/Servicios/enServicio9.html
+++ b/Translate/Servicios/enServicio9.html
@@ -96,18 +96,18 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render1.jpeg" alt="Semiremolque" class="imagen-principal">
+                <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render1.jpeg" alt="Semiremolque" class="imagen-principal">
                 <div class="miniaturas">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render1.jpeg" alt="Dolly Vista 2" class="mini activa">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render2.jpeg" alt="Dolly Vista 3" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render3.jpeg" alt="Dolly Vista 4" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render4.jpeg" alt="Dolly Vista 5" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render5.jpeg" alt="Dolly Vista 6" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render6.jpeg" alt="Dolly Vista 7" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render7.jpeg" alt="Dolly Vista 8" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render8.jpeg" alt="Dolly Vista 9" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render9.jpeg" alt="Dolly Vista 10" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Semiremolque/Render10.jpeg" alt="Dolly Vista 10" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render1.jpeg" alt="Dolly Vista 2" class="mini activa">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render2.jpeg" alt="Dolly Vista 3" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render3.jpeg" alt="Dolly Vista 4" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render4.jpeg" alt="Dolly Vista 5" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render5.jpeg" alt="Dolly Vista 6" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render6.jpeg" alt="Dolly Vista 7" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render7.jpeg" alt="Dolly Vista 8" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render8.jpeg" alt="Dolly Vista 9" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render9.jpeg" alt="Dolly Vista 10" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Semiremolque/Render10.jpeg" alt="Dolly Vista 10" class="mini">
                 </div>
             </div>
         </div>
