--- a/Translate/Servicios/enServicio9.html
+++ b/Translate/Servicios/enServicio9.html
@@ -20,7 +20,7 @@
             <div class="header-content">
                 <div class="logo">
                     <a href="#inicio">
-                        <img class="logo-img" src="../../Static/Images/FULL-LOGO-H.PNG" alt="Logo Full Services SAS">
+                        <img class="logo-img" src="../../Static/Images/FULL-LOGO-H.png" alt="Logo Full Services SAS">
                         <img class="logo-img-dark" src="../../Static/Images/logo prueba.png" alt="Logo Full Services SAS">
                     </a>
                 </div>
