--- a/enBlog.html
+++ b/enBlog.html
@@ -161,9 +161,9 @@
                 <h2 class="blog-section-title">Latest Publications</h2>
                 <div class="blog-filter-buttons">
                     <button class="blog-filter-btn active" data-filter="all">All</button>
-                    <button class="blog-filter-btn" data-filter="noticias">News</button>
-                    <button class="blog-filter-btn" data-filter="eventos">Events</button>
-                    <button class="blog-filter-btn" data-filter="logros">Achievements</button>
+                    <button class="blog-filter-btn" data-filter="News">News</button>
+                    <button class="blog-filter-btn" data-filter="Events">Events</button>
+                    <button class="blog-filter-btn" data-filter="Succeses">Succeses</button>
                 </div>
             </div>
             
