--- a/Translate/Servicios/enServicio6.html
+++ b/Translate/Servicios/enServicio6.html
@@ -29,9 +29,9 @@
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="../../enIndex.html" class="nav-link"><span>Home</span></a></li>
-                        <li><a href="../../enIndex.html" class="nav-link"><span>About Us</span></a></li>
-                        <li><a href="../../enIndex.html" class="nav-link"><span>Services</span></a></li>
-                        <li><a href="../../enIndex.html" class="nav-link"><span>Contact</span></a></li>
+                        <li><a href="../../enIndex.html#nosotros" class="nav-link"><span>About Us</span></a></li>
+                        <li><a href="../../enIndex.html#servicios" class="nav-link"><span>Services</span></a></li>
+                        <li><a href="../../enIndex.html#contacto" class="nav-link"><span>Contact</span></a></li>
                         <li><a href="../../enBlog.html" class="nav-link"><span>Blog</span></a></li>
                         <li class="nav-login-mobile">
                             <a href="https://login.microsoftonline.com/common/oauth2/v2.0/authorize?client_id=10fa57ef-4895-4ab2-872c-8c3613d4f7fb&redirect_uri=https%3A%2F%2Fwww.microsoft.com%2Fcascadeauth%2Faccount%2Fsignin-oidc&response_type=code&prompt=login&scope=openid%20profile%20offline_access&code_challenge=1YdYcMgD-KsQtfvXJJ9lDfdO1nOlA6DCDR5K-V6GJ5E&code_challenge_method=S256&response_mode=form_post&nonce=638961383103203040.NDZlYmRmNjUtNTlhMS00ODYxLThlYjAtZjg2OGY5NDQ1NzhkNDkwYzJiOWUtNDE0YS00NGQ2LWI2ODQtZjVmMDhlYmI5ZjI2&client_info=1&x-client-brkrver=IDWeb.3.9.2.0&lc=9226&claims=%7B%22compact%22%3A%7B%22name%22%3A%7B%22essential%22%3Atrue%7D%7D%7D&state=CfDJ8LpX7AEm64lJqvovzonWFb4sN8kdpbXK5t26RPsQ1gd0ql-TqVH4wrwYosSA47tqTjXg7rkw7fjCU8kKpx1e-HGLi3d_TIxUAR_I7LRAX1q3mmz6S-sH1gBMK46nff6z8UUzYezbp5wnfr1kRgDBJ82eCasZaEz3FrW8ak1Kr4hedaQney8tk1oJCBj2MpCi-90fLtiFLswvZUUkVVM-9ZaUwmfBczurckmwUu0CJPqQoi-xOEE_j6WwF7xLgbTyixHFaT6hx43GNW7oNIAIK2oMLdAAIB-kpVYEKrcz9PwIek6S8pNkLx2GPHUUyPfV_jHJdPNJVxqzblslmbVUMMxzJ8zaS4lRndd_vUpoH0WO9TADsrRBAUMHy7Xz2JPq7w79foOgfEK-YKG9D2q0WPi-OLWoXWmejGnDSwq4Ait3h9wGm600oZjZjAtC-J_r3MjQub7vn0G3TFo8te3DE5MqYwUjr-TcZtDTCYSxzuZyw6QgvkwtXNzbwbFzZTJklsxJQ1OVWPkhRE4OBKZw0tAjg6SO27G_EvlS3SfLmphqGcYGxMOfej9q-y8Z6cdvIuXxocqVtSaLr-L8uNjUsDzVHlCs23WLL6oBEnzL93r6&x-client-SKU=ID_NET6_0&x-client-ver=8.11.0.0&sso_reload=true" class="btn-login">Log In</a>
@@ -40,9 +40,10 @@
                 </nav>
 
                 <div class="header-actions">
-                    <button class="translate-btn" aria-label="Traducir">
+                    <a href="../../Templates/Servicios/Trailers6.html" class="translate-btn" aria-label="Traducir">
                         <i class="fa-solid fa-globe"></i>
-                    </button>
+                        <span>EN</span>
+                    </a>
 
                     <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                         <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -173,20 +174,20 @@
                 <div class="footer-col">
                     <h4 class="footer-heading">Services</h4>
                     <ul class="footer-links">
-                        <li><a href="../..//enIndex.html">Work-Over</a></li>
-                        <li><a href="../..//enIndex.html">Trailers</a></li>
-                        <li><a href="../..//enIndex.html">Civil Engineering Works</a></li>
-                        <li><a href="../..//enIndex.html">Architecture</a></li>
-                        <li><a href="../..//enIndex.html">Transportation</a></li>
-                        <li><a href="../..//enIndex.html">Industrial Services</a></li>
+                        <li><a href="../..//enIndex.html#servicios">Work-Over</a></li>
+                        <li><a href="../..//enIndex.html#servicios">Trailers</a></li>
+                        <li><a href="../..//enIndex.html#servicios">Civil Engineering Works</a></li>
+                        <li><a href="../..//enIndex.html#servicios">Architecture</a></li>
+                        <li><a href="../..//enIndex.html#servicios">Transportation</a></li>
+                        <li><a href="../..//enIndex.html#servicios">Industrial Services</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-col">
                     <h4 class="footer-heading">Company</h4>
                     <ul class="footer-links">
-                        <li><a href="../..//enIndex.html">About Us</a></li>
-                        <li><a href="../..//enIndex.html">Contact</a></li>
+                        <li><a href="../..//enIndex.html#nosotros">About Us</a></li>
+                        <li><a href="../..//enIndex.html#contacto">Contact</a></li>
                         <li><a href="../..//Translate/enFormWork.html">Work with Us</a></li>
                         <li><a href="../..//enBlog.html">Blog</a></li>
                         <li><a href="../..//Translate/enHSEQ.html">HSEQ</a></li>
