--- a/Translate/enHSEQ.html
+++ b/Translate/enHSEQ.html
@@ -30,9 +30,9 @@
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="../enIndex.html" class="nav-link"><span>Home</span></a></li>
-                        <li><a href="../enIndex.html" class="nav-link"><span>About Us</span></a></li>
-                        <li><a href="../enIndex.html" class="nav-link"><span>Services</span></a></li>
-                        <li><a href="../enIndex.html" class="nav-link"><span>Contact</span></a></li>
+                        <li><a href="../enIndex.html#nosotros" class="nav-link"><span>About Us</span></a></li>
+                        <li><a href="../enIndex.html#servicios" class="nav-link"><span>Services</span></a></li>
+                        <li><a href="../enIndex.html#contacto" class="nav-link"><span>Contact</span></a></li>
                         <li><a href="../enBlog.html" class="nav-link"><span>Blog</span></a></li>
 
 
@@ -43,9 +43,10 @@
                 </nav>
 
                 <div class="header-actions">
-                    <button class="translate-btn" aria-label="Traducir">
-                        <a href="../Templates/HSEQ.html"><i class="fa-solid fa-globe"></i></a>
-                    </button>
+                    <a href="../Templates/HSEQ.html" class="translate-btn" aria-label="Traducir">
+                        <i class="fa-solid fa-globe"></i>
+                        <span>EN</span>
+                    </a>
 
                     <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                         <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -137,20 +138,20 @@
                 <div class="footer-col">
                     <h4 class="footer-heading">Services</h4>
                     <ul class="footer-links">
-                        <li><a href="../enIndex.html">Work-Over</a></li>
-                        <li><a href="../enIndex.html">Trailers</a></li>
-                        <li><a href="../enIndex.html">Civil Engineering Works</a></li>
-                        <li><a href="../enIndex.html">Architecture</a></li>
-                        <li><a href="../enIndex.html">Transportation</a></li>
-                        <li><a href="../enIndex.html">Industrial Services</a></li>
+                        <li><a href="../enIndex.html#servicios">Work-Over</a></li>
+                        <li><a href="../enIndex.html#servicios">Trailers</a></li>
+                        <li><a href="../enIndex.html#servicios">Civil Engineering Works</a></li>
+                        <li><a href="../enIndex.html#servicios">Architecture</a></li>
+                        <li><a href="../enIndex.html#servicios">Transportation</a></li>
+                        <li><a href="../enIndex.html#servicios">Industrial Services</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-col">
                     <h4 class="footer-heading">Company</h4>
                     <ul class="footer-links">
-                        <li><a href="../enIndex.html">About Us</a></li>
-                        <li><a href="../enIndex.html">Contact</a></li>
+                        <li><a href="../enIndex.html#nosotros">About Us</a></li>
+                        <li><a href="../enIndex.html#contacto">Contact</a></li>
                         <li><a href="../Translate/enFormWork.html">Work with Us</a></li>
                         <li><a href="../enBlog.html">Blog</a></li>
                         <li><a href="../Translate/enHSEQ.html">HSEQ</a></li>
