--- a/enIndex.html
+++ b/enIndex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S&J Full Services S.A.S</title>
-    <meta name="description" content="Full Services - Prestamos servicios que integran el sector petrolero, industrial, civil y arquitectónico logrando el mejoramiento y progreso continuo.">
+    <meta name="description" content="Full Services - We provide services that integrate the oil, industrial, civil, and architectural sectors, achieving continuous improvement and progress.">
     <link rel="icon" type="image/x-icon" href="Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="Static/Styles/styles.css">
     <link rel="stylesheet" href="Static/Styles/responsive.css">
@@ -43,9 +43,10 @@
                 </nav>
 
                 <div class="header-actions">
-                    <button class="translate-btn" aria-label="Traducir">
-                        <a href="index.html"><i class="fa-solid fa-globe"></i></a>
-                    </button>
+                    <a href="index.html" class="translate-btn" aria-label="Traducir">
+                        <i class="fa-solid fa-globe"></i>
+                        <span>EN</span>
+                    </a>
 
                     <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                         <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
