--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                 </nav>
 
                 <div class="header-actions">
-                    <button class="translate-btn" aria-label="Traducir">
-                        <a href="enIndex.html"><i class="fa-solid fa-globe"></i></a>
-                    </button>
+                    <a href="enIndex.html" class="translate-btn" aria-label="Traducir">
+                        <i class="fa-solid fa-globe"></i>
+                        <span>ES</span>
+                    </a>
+
 
                     <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                         <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
