--- a/Translate/Servicios/enServicio6.html
+++ b/Translate/Servicios/enServicio6.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Low Bed Trailer</title>
-    <meta name="description" content="Full Services - Prestamos servicios que integran el sector petrolero, industrial, civil y arquitectónico logrando el mejoramiento y progreso continuo.">
+    <meta name="description" content="Full Services - Comprehensive solutions in oil, civil, industrial, and architectural sectors with expert personnel and cutting-edge technology.">
     <link rel="icon" type="image/x-icon" href="../../Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="../../Static/Styles/styles.css">
     <link rel="stylesheet" href="../../Static/Styles/responsive.css">
