--- a/Translate/enFormWork.html
+++ b/Translate/enFormWork.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabaja con Nosotros S&J Full Services S.A.S</title>
-    <meta name="description" content="Full Services - Prestamos servicios que integran el sector petrolero, industrial, civil y arquitectónico logrando el mejoramiento y progreso continuo.">
+    <title>Work With Us S&J Full Services S.A.S</title>
+    <meta name="description" content="Full Services - Join a team committed to innovation, safety, and excellence across the oil, civil, and industrial sectors">
     <link rel="icon" type="image/x-icon" href="../Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="../Static/Styles/styles.css">
     <link rel="stylesheet" href="../Static/Styles/responsive.css">
