--- a/enIndex.html
+++ b/enIndex.html
@@ -284,7 +284,7 @@
                 <div class="modal-footer">
                     <a href="#" target="_blank" id="whatsappLink" class="btn-whatsapp-footer" aria-label="WhatsApp">
                         <i class="fa-brands fa-whatsapp"></i>
-                        <span>¡Contact Us!</span>
+                        <span>Contact Us!</span>
                     </a>
                 </div>
             </div>
