--- a/Translate/enPoliticas.html
+++ b/Translate/enPoliticas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politicas de Privacidad S&J Full Services S.A.S</title>
-    <meta name="description" content="Full Services - Prestamos servicios que integran el sector petrolero, industrial, civil y arquitectónico logrando el mejoramiento y progreso continuo.">
+    <meta name="description" content="Full Services - Our policies reflect a commitment to ethics, transparency, and continuous improvement across all operations.">
     <link rel="icon" type="image/x-icon" href="../Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="../Static/Styles/styles.css">
     <link rel="stylesheet" href="../Static/Styles/responsive.css">
