--- a/enBlog.html
+++ b/enBlog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog S&J Full Services S.A.S</title>
-    <meta name="description" content="Full Services - Prestamos servicios que integran el sector petrolero, industrial, civil y arquitectónico logrando el mejoramiento y progreso continuo.">
+    <meta name="description" content="Full Services - Discover updates, insights, and trends from the energy, civil, and industrial sectors..">
     <link rel="icon" type="image/x-icon" href="Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="Static/Styles/styles.css">
     <link rel="stylesheet" href="Static/Styles/responsive.css">
@@ -174,6 +174,35 @@
                     </div>
                     <button id="load-more" class="blog-load-more-btn">Cargar más publicaciones</button>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="horario-section">
+        <div class="horario-card">
+            <div class="icon-container">
+                <i class="fa-solid fa-clock"></i>
+            </div>
+            
+            <h2>OPENING HOURS</h2>
+            <div class="horario-list">
+                <div class="horario-item">
+                    <span>Monday to Friday</span>
+                    <strong>8:00 A.M. – 5:00 P.M.</strong>
+                </div>
+                <div class="horario-item">
+                    <span>Saturday</span>
+                    <strong>8:00 A.M. – 12:00 P.M.</strong>
+                </div>
+                <div class="horario-item cerrado">
+                    <span>Sunday</span>
+                    <strong>CLOSE</strong>
+                </div>
+            </div>
+
+            <div class="contacto">
+                <i class="fa-brands fa-whatsapp"></i>
+                <span><a href="https://wa.link/mi5n03">Contact Us!</a></span>
             </div>
         </div>
     </section>
