--- a/enBlog.html
+++ b/enBlog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog S&J Full Services S.A.S</title>
-    <meta name="description" content="Full Services - Discover updates, insights, and trends from the energy, civil, and industrial sectors..">
+    <meta name="description" content="Full Services - Explore articles, news, and trends about the oil, civil, and industrial industries.">
     <link rel="icon" type="image/x-icon" href="Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="Static/Styles/styles.css">
     <link rel="stylesheet" href="Static/Styles/responsive.css">
