--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog S&J Full Services S.A.S</title>
-    <meta name="description" content="Full Services - Explora artículos, novedades y tendencias sobre la industria energética, civil e industrial.">
+    <meta name="description" content="Full Services - Explora artículos, novedades y tendencias sobre la industria petrolera, civil e industrial.">
     <link rel="icon" type="image/x-icon" href="Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="Static/Styles/styles.css">
     <link rel="stylesheet" href="Static/Styles/responsive.css">
